# terminal_note

./: Cargo.toml  README.md
data/: nota2test.json  nota3.json  test1.json  test2.json  test_di_prova.json  testino_di_cazzo.json
src/: main.rs
