[package]
name = "note"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
edit = "0.1.4"
ratatui = "0.26.1"
crossterm = "0.27.0"
